@startuml
title Movie-Rec - Class Diagram (Domain + Service)
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam monochrome true

package "Domain Entities" {
  class User {
    +id: int
    +backend_user_id: int
    +nickname: string
    +name: string
    +email: string
    +role: string
    +bio: string
    +avatar_url: string
  }

  class AuthSession {
    +id: int
    +user_id: int
    +session_token: string
    +created_at: datetime
  }

  abstract class MediaItem {
    +tmdb_id: int
    +title: string
    +overview: string
    +poster_path: string
    +backdrop_path: string
    +vote_average: float
  }

  class Movie
  class TvShow

  class UserMovieState {
    +user_id: int
    +tmdb_id: int
    +media_type: string
    +in_watchlist: bool
    +in_favorites: bool
    +watched: bool
    +rating: int
    +updated_at: datetime
  }

  class UserListPrivacy {
    +user_id: int
    +watchlist: bool
    +favorites: bool
    +watched: bool
    +rated: bool
  }

  class FollowRelation {
    +follower_id: int
    +followee_id: int
    +created_at: datetime
  }

  class MovieComment {
    +id: int
    +tmdb_id: int
    +user_id: int
    +text: string
    +parent_id: int
    +created_at: datetime
  }

  class GalleryItem {
    +id: int
    +title: string
    +tag: string
    +image_url: string
    +shot_id: string
    +created_at: datetime
  }

  class GalleryComment {
    +id: int
    +gallery_id: int
    +user_id: int
    +text: string
    +parent_id: int
    +created_at: datetime
  }

  class CinemaEvent {
    +id: int
    +title: string
    +video_url: string
    +poster_url: string
    +tmdb_id: int
    +start_at: datetime
    +end_at: datetime
  }

  class CinemaPoll {
    +id: int
    +question: string
    +status: string
    +expires_at: datetime
  }

  class CinemaPollOption {
    +id: string
    +poll_id: int
    +title: string
    +tmdb_id: int
    +poster_url: string
    +votes: int
  }

  class Notification {
    +id: int
    +user_id: int
    +type: string
    +title: string
    +body: string
    +action_path: string
    +read_at: datetime
  }

  class NotificationSubscription {
    +user_id: int
    +kind: string
    +target_id: string
    +payload_json: string
  }

  class PushToken {
    +id: int
    +user_id: int
    +expo_push_token: string
    +platform: string
    +device_name: string
  }

  class MLInteraction {
    +user_id: int
    +tmdb_id: int
    +media_type: string
    +event_type: string
    +event_value: float
    +occurred_at: datetime
  }

  class RecommendationResult {
    +user_id: int
    +tmdb_id: int
    +score: float
    +reason: string
  }
}

package "Application Services" {
  class AuthService
  class MovieStateService
  class GalleryService
  class CinemaService
  class NotificationService
  class RecommendationService
}

package "External Integrations" {
  class TMDBClient
  class CloudinaryClient
  class MLApiClient
  class ExpoPushClient
}

MediaItem <|-- Movie
MediaItem <|-- TvShow

User "1" -- "0..1" AuthSession
User "1" -- "0..*" UserMovieState
User "1" -- "0..*" MovieComment
User "1" -- "0..*" GalleryComment
User "1" -- "0..*" Notification
User "1" -- "0..*" NotificationSubscription
User "1" -- "0..*" PushToken
User "1" -- "0..*" MLInteraction
User "1" -- "0..*" FollowRelation : follower
User "1" -- "0..*" FollowRelation : followee
User "1" -- "0..1" UserListPrivacy

UserMovieState "*" --> "1" MediaItem
MovieComment "*" --> "1" MediaItem
GalleryComment "*" --> "1" GalleryItem
CinemaPoll "1" *-- "2..*" CinemaPollOption

AuthService ..> User
AuthService ..> AuthSession

MovieStateService ..> UserMovieState
MovieStateService ..> UserListPrivacy
MovieStateService ..> MLInteraction
MovieStateService ..> TMDBClient

GalleryService ..> GalleryItem
GalleryService ..> GalleryComment
GalleryService ..> CloudinaryClient

CinemaService ..> CinemaEvent
CinemaService ..> CinemaPoll
CinemaService ..> CinemaPollOption
CinemaService ..> MovieComment

NotificationService ..> Notification
NotificationService ..> NotificationSubscription
NotificationService ..> PushToken
NotificationService ..> ExpoPushClient

RecommendationService ..> MLInteraction
RecommendationService ..> RecommendationResult
RecommendationService ..> MLApiClient
RecommendationService ..> TMDBClient

@enduml
